Fix PartitionAlloc test: PartitionAllocTest.GenericAllocGetSize failed on Loongson.

The bug comes from test unit: base_unittests
The failed case: PartitionAllocTest.GenericAllocGetSize

Due to Loongson kSystemPageSize is 16384, error will occurred on the value
of sub_order_index in PartitionGenericSizeToBucket function.

Bug: 800614

R= haraken@chromium.org

Change-Id: Ib2b30c26ae076c7221a6c4d64f8094f0067af8aa